--- a/exercicio/desafio 012/estilos/style.css
+++ b/exercicio/desafio 012/estilos/style.css
@@ -33,7 +33,7 @@ section{
     padding-bottom: 10vh;
     padding-left: 8%;
     font-family: 'Dancing Script', cursive;
-    font-size: 2em;
+    font-size: 3vw;
     font-family: 'Pacifico', cursive;
 }
 section.normal{
