--- a/exercicio/desafio 012/estilos/style.css
+++ b/exercicio/desafio 012/estilos/style.css
@@ -9,6 +9,7 @@ html, body{
     background-color: darkgray;
 }
 header{
+    width: 100%;
     height: 150px;
     background-color: black;
     color: white;
