--- a/teste de landing page/estilos/style.css
+++ b/teste de landing page/estilos/style.css
@@ -15,7 +15,7 @@
     --font2: 'Mulish', sans-serif;
 }
 html, body{
-    height: 200vh;
+    height: 100%;
 }
 .sidebar-pos{
     position: absolute;
@@ -66,7 +66,7 @@ html, body{
     bottom: 10%;
     width: 83vw;
     margin-top: 0%;
-    height: 100%;
+    height: 100vh;
     text-align: left;
 }
 .content h1{
@@ -107,7 +107,7 @@ html, body{
     padding-left: 55%;
 }
 .icons-social a > img{
-    width: 40px;
+    max-width: 40px;
     height: 40px;
     margin-top: 10%;
     margin-left: 2%
